<resources>
    <string name="my_app_name" translatable="false">NeQabty</string>
    <string name="capture">Capture Photo</string>
    <string name="history">Show History</string>
    <string name="turn_on_gps">Please turn on your GPS</string>
    <string name="turn_on_gps_for_store">Please turn on GPS to be able to load \n weather state</string>
    <string name="retry">retry</string>
    <string name="unknown_error">unknown error</string>
    <string name="intro_one">All the services of the Syndicate of Engineers are now available in your hands through the application of my neQabty</string>
    <string name="intro_two">You can now pay all your subscriptions through the electronic payment service </string>
    <string name="intro_three">You can now Have all your medical services and approvals through the neQabty app</string>
    <string name="intro_four">You can follow up on all the news and alerts of the Syndicate first hand</string>
    <string name="intro_five">You can also get acquainted with all the trips provided by the union with the possibility of booking and payment</string>
    <string name="phoneNumber">Mobile Number</string>
    <string name="password">Password</string>
    <string name="forgetPassword"><u>Forget Password</u></string>
    <string name="login">Login to the account</string>
    <string name="activate_account_title">account activation</string>
    <string name="number_confirmation">The number you entered <![CDATA[<font color="#0b2031"><b>%s </b><br></font>]]></string>
    <string name="member_number_confirmation">Are you sure about your membership number?!</string>
    <string name="mobile_number_confirmation">Are you sure about your Phone number?!</string>
    <string name="experimental_version">(Beta Version)</string>
    <string name="register"><u>No registration account</u></string>
    <string name="skip">Log in as a visitor</string>
    <string name="fullName">Full Name</string>
    <string name="firstName">First Name</string>
    <string name="secondName">second Name</string>
    <string name="thirdName">Third Name</string>
    <string name="fourthName">Forth Name</string>
    <string name="email">Email</string>
    <string name="current_password">current password</string>
    <string name="new_password">New Password</string>
    <string name="confirmPassword">confirm Password</string>
    <string name="unmatched_password">unmatched password</string>
    <string name="age">Birth Date</string>
    <string name="gender">Gender</string>
    <string name="prev">Prev</string>
    <string name="next">Next</string>
    <string name="signup_title">Creat New Account</string>
    <string name="signup_submit">Create account</string>
    <string name="signup_hint">This number is not registered before. Please create an account to be able to use the service</string>
    <string name="activate_account_hint">The account has been created successfully, a text message with the identification code and password will be sent. Please activate the account</string>
    <string name="login_with_password_hint">This number is already registered. Please enter the password to log into the account</string>
    <string name="personalDetails">Personal Information</string>
    <string name="confirm">confirm</string>
    <string name="welcome">welcome</string>
    <string name="welcome_with_name">welcome  <![CDATA[<font color="#0b2031"><b>%s </b><br></font>]]></string>
    <string name="welcome_with_password">Your password is the last 4 digits of the national number</string>
    <string name="welcome_with_name_login">This number is registered under  <![CDATA[<font color="#0b2031"><b>%s </b><br></font>]]>هل تريد تأكيد الدخول؟</string>
    <string name="welcome_to_neqabty">Welcome to the Egyptian Syndicate of Engineers application - neQabty</string>
    <string name="main">Main</string>
    <string name="aboutNeqaba">About the Syndicate</string>
    <string name="settings">settings</string>
    <string name="callus">Call Us</string>
    <string name="help">Help</string>
    <string name="aboutApp">About App</string>
    <string name="loading">Loading</string>
    <string name="error">Error</string>
    <string name="error_msg">Sorry, an error occurred.. Please try again later</string>
    <string name="sharee">Share</string>
    <string name="news">News</string>
    <string name="trips">Trips</string>
    <string name="currency">%s l.e</string>
    <string name="date_from">From: %s</string>
    <string name="date_to">To: %s</string>
    <string name="one_person">One Person</string>
    <string name="two_persons">Tow Persons</string>
    <string name="three_persons">Three Persons</string>
    <string name="view_price">front</string>
    <string name="side_price">Side</string>
    <string name="one_room">Roon</string>
    <string name="two_rooms">Two Rooms</string>
    <string name="studio">studio</string>
    <string name="regiments">regiments</string>
    <string name="regiment">regiment</string>
    <string name="children">children</string>
    <string name="child_one">First Child Age</string>
    <string name="child_two">Second Child Age</string>
    <string name="child_three">Third Child Age</string>
    <string name="trip_type">Trip Type</string>
    <string name="room_type">Room Type</string>
    <string name="trip_desc">Trip Description</string>
    <string name="trip_price">Trip Price</string>
    <string name="about_hotel">About Hotel</string>
    <string name="reserve">Reserve</string>
    <string name="choose_regiment">Choose Time</string>
    <string name="view_regiments">view regiments</string>
    <string name="confirm_reservation">confirm reservation</string>
    <string name="attach_photo">Upload Photo</string>
    <string name="attach_companion_title">Add companion title</string>
    <string name="attach_companion">Add Companion</string>
    <string name="attach_title">Upload Files</string>
    <string name="attach_hint">Upload a picture of the membership card - birth certificates - personal card</string>
    <string name="relation_degree">Relationship Degree</string>
    <string name="age_on_trip">Age At Trip Time</string>
    <string name="birth_date">Birth Date</string>
    <string name="thanks">Thanks</string>
    <string name="confirm_reservation_msg">Your request has been registered and we will respond to you within the day</string>
    <string name="addProfileImage">Add Profile Image</string>
    <string name="viewPhoto">View Photo</string>
    <string name="format">yyyy/MM/dd</string>
    <string name="mandatoryField">Required</string>
    <string name="loginError">Wrong UserName or Password</string>
    <string name="passwordMatchError">Password did not match</string>
    <string name="selectSubSyndicate">Select Syndicate</string>
    <string name="confirmation_sent">Confirmation Code Had Been Sent To Your Phone</string>
    <string name="enter_confirmation_code">Please Enter The Confirmation Code</string>
    <string name="resend_code"> Resend Code %s</string>
    <string name="congratulations">successfully registered</string>
    <string name="request_sent">Your request has been registered and we will respond to you within the day</string>
    <string name="request_status">Your request is under consideration</string>
    <string name="continue_btn">Continue</string>
    <string name="skip_btn">Skip</string>
    <string name="login_hint">You can now login to the application and enjoy the services of your syndicate</string>
    <string name="update_msg">Please update the app to the latest version to be able to use it.</string>
    <string name="root_msg">This device does not compatible with the minimum safety requirements for the application.</string>
    <string name="doctors">Doctors</string>
    <string name="hospitals">Hospitals</string>
    <string name="scan_centers">Scan Centers</string>
    <string name="pharmacies">Pharmacy</string>
    <string name="others">Other Services</string>
    <string name="optics">Optics</string>
    <string name="artificial_limbs">Artificial Limbs</string>
    <string name="pathology_labs">Pathology Labs</string>
    <string name="laboratories">Laboratories</string>
    <string name="mobile_title">sign in</string>
    <string name="enter_mobile">Please Enter Your Phone Number</string>
    <string name="entered_mobile">The phone number entered</string>
    <string name="enter_verification_code">Please Enter your Varification Code</string>
    <string name="login_visitor_enter_mobile">Please Enter Your Phone Number To Create The Account</string>
    <string name="choose_service">Select Service</string>
    <string name="enter_member_number">Enter Your Membership Number</string>
    <string name="login_member_enter_member_number">Please enter your membership number to complete the account information</string>
    <string name="change_number_enter_member_number">Please enter your correct membership number to complete the account information</string>
    <string name="national_id_digits">Please Enter Your Password  \n(It is the last 4 digits of the national number)</string>
    <string name="current_mobile_title">Please Enter Your Phone Number</string>
    <string name="new_mobile_title">New Phone Number</string>
    <string name="national_id_four_digits">Please Enter Last 4 Digits Of Your National Number</string>
    <string name="medicalRequest">Submit medical approvals</string>
    <string name="syndicateNumber">Membership Number</string>
    <string name="member_name">Name</string>
    <string name="beneficiary_name">Beneficiary Name</string>
    <string name="medical_letter_approval_number">Medical Approval Serial</string>
    <string name="inquire">Inquire</string>
    <string name="cardNumber">Medical Card Number</string>
    <string name="selectDoctor">Select Doctor</string>
    <string name="addRequestImage">Get Medical Approval</string>
    <string name="submit">Submit</string>
    <string name="medicalDirectory">Medical Directory</string>
    <string name="search">search</string>
    <string name="services">services</string>
    <string name="favorites">favorites</string>
    <string name="governorate">governorate</string>
    <string name="area">area</string>
    <string name="all_areas">all areas</string>
    <string name="choose_area">choose area</string>
    <string name="subscription_rules">medical Project guide</string>
    <string name="service">service</string>
    <string name="degree">degree</string>
    <string name="speciality">speciality</string>
    <string name="all">All</string>
    <string name="areaDetails">Choose Area</string>
    <string name="doctorDetails">Doctor Info</string>
    <string name="doctor">Doctor</string>
    <string name="doctorName">Doctor Name</string>
    <string name="serviceProviderType">service Provider Type</string>
    <string name="serviceProvider">service Provider</string>
    <string name="searchProviderName">Search with service Provider Name</string>
    <string name="syndicates_title">Select Syndicate</string>
    <string name="home_title">Home Page</string>
    <string name="news_title">News</string>
    <string name="trips_title">Trips</string>
    <string name="medical_renew_title">medical services Supscription</string>
    <string name="claiming_title">Medical Aprovall</string>
    <string name="medical_title">Medical Guide</string>
    <string name="inquiry_title">Payment</string>
    <string name="engineering_records_title">Engineering record renewal</string>
    <string name="update_data_title">Update Data</string>
    <string name="complaints_title">Customer Service and Complaints</string>
    <string name="about_title">About Syndicate</string>
    <string name="settings_title">Settings</string>
    <string name="contactus_title">Call Us</string>
    <string name="aboutapp_title">About App</string>
    <string name="notifications_title">Notifications</string>
    <string name="pay">Pay</string>
</resources>