<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home_fragment"
        android:icon="@drawable/ic_menu_home"
        android:title="@string/home_title" />

    <!--<group>-->
    <item
        android:id="@+id/news_fragment"
        android:icon="@drawable/ic_menu_news"
        android:title="@string/news_title" />
    <item
        android:id="@+id/trips_fragment"
        android:icon="@drawable/ic_menu_trips"
        android:title="@string/trips_title" />
    <item
        android:id="@+id/medical_renew_fragment"
        android:icon="@drawable/ic_menu_claiming"
        android:title="@string/medical_renew_title" />
    <item
        android:id="@+id/medical_fragment"
        android:icon="@drawable/ic_menu_medical"
        android:title="@string/medical_title" />
    <item
        android:id="@+id/claiming_fragment"
        android:icon="@drawable/ic_menu_claiming"
        android:title="@string/claiming_title" />
    <item
        android:id="@+id/inquiry_fragment"
        android:icon="@drawable/ic_menu_payments"
        android:title="@string/inquiry_title" />
<!--    <item-->
<!--        android:id="@+id/engineering_records_fragment"-->
<!--        android:icon="@drawable/ic_menu_records"-->
<!--        android:title="@string/engineering_records_title" />-->
<!--    <item-->
<!--        android:id="@+id/update_data_fragment"-->
<!--        android:icon="@drawable/ic_menu_update_data"-->
<!--        android:title="@string/update_data_title" />-->
    <item
        android:id="@+id/complaints_fragment"
        android:icon="@drawable/ic_menu_complaints"
        android:title="@string/complaints_title" />

    <item
        android:id="@+id/about_fragment"
        android:icon="@drawable/ic_menu_about_us"
        android:title="@string/about_title" />

    <item
        android:id="@+id/about_app_fragment"
        android:icon="@drawable/ic_menu_about_app"
        android:title="@string/aboutapp_title" />

    <item
        android:id="@+id/settings_fragment"
        android:icon="@drawable/ic_menu_settings"
        android:title="@string/settings_title" />

    <!--</group>-->

    <!--<item-->
    <!--android:id="@+id/settings_fragment"-->
    <!--android:icon="@mipmap/setting"-->
    <!--android:title="@string/settings_title" />-->
    <item
        android:id="@+id/contactus_fragment"
        android:icon="@drawable/ic_menu_contact_us"
        android:title="@string/contactus_title" />
    <!--<item-->
    <!--android:id="@+id/aboutapp_fragment"-->
    <!--android:icon="@mipmap/about_app_ic"-->
    <!--android:title="@string/aboutapp_title" />-->
    <!--<item-->
    <!--android:id="@+id/help_fragment"-->
    <!--android:icon="@mipmap/help_ic"-->
    <!--android:title="@string/help_title" />-->
    <!--<item-->
    <!--android:id="@+id/logout_fragment"-->
    <!--android:icon="@mipmap/logout_ic_2"-->
    <!--android:title="@string/logout_title"-->
    <!--android:visible="false" />-->
</menu>