<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/notifications_fragment"
        android:icon="@mipmap/notification_ic"
        app:actionLayout="@layout/notification_custom_action_item"
        android:title="@string/notifications_title"
        app:showAsAction="always" />
    <!--<item-->
        <!--android:id="@+id/logout_fragment"-->
        <!--android:icon="@mipmap/logout_ic"-->
        <!--android:title="@string/logout_title"-->
        <!--app:showAsAction="always" />-->
    <item
        android:id="@+id/search_fragment"
        android:icon="@mipmap/search"
        android:title="@string/search"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/favorites_fragment"
        android:icon="@mipmap/star_white"
        android:title="@string/favorites"
        app:showAsAction="always" />
</menu>