<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="loading"
            type="boolean" /></data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ScrollView
            android:id="@+id/svContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/margin_horizontal_large"
            android:paddingEnd="@dimen/margin_horizontal_large"
            android:scrollbars="none"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/edName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/member_name"
                    android:inputType="number"
                    android:textSize="@dimen/text_size_medium" />


                <EditText
                    android:id="@+id/edNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/syndicateNumber"
                    android:inputType="number"
                    android:textSize="@dimen/text_size_medium" />


                <EditText
                    android:id="@+id/edCardNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cardNumber"
                    android:inputType="number"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size_medium" />

                <Spinner
                    android:id="@+id/spGovern"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/governorate"
                    android:textDirection="rtl"
                    style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                    android:textSize="@dimen/text_size_medium" />

                <Spinner
                    android:id="@+id/spArea"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/area"
                    android:textDirection="rtl"
                    style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                    android:textSize="@dimen/text_size_medium" />

                <Button
                    android:id="@+id/bNext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/btn"
                    android:gravity="center"
                    android:text="@string/next"
                    android:textColor="@android:color/white"
                    android:elevation="@dimen/elevation_level_one"
                    android:textSize="@dimen/text_size_medium" />
            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>