<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">

    <action
        android:id="@+id/openLoginFragment"
        app:destination="@id/loginFragment"
        app:popUpTo="@id/nav_graph"
        app:popUpToInclusive="true" />

    <fragment
        android:id="@+id/introFragment"
        android:name="com.neqabty.presentation.ui.intro.IntroFragment"
        android:label=" "
        tools:layout="@layout/intro_fragment">
    </fragment>

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.neqabty.presentation.ui.login.LoginFragment"
        android:label="@string/mobile_title"
        tools:layout="@layout/login_fragment">
        <!--        <action-->
        <!--            android:id="@+id/openSyndicatesFragment"-->
        <!--            app:destination="@id/syndicatesFragment" />-->

        <action
            android:id="@+id/openHome"
            app:destination="@id/homeFragment" />
    </fragment>

    <fragment
        android:id="@+id/signupFragment"
        android:name="com.neqabty.presentation.ui.signup.SignupFragment"
        android:label="@string/signup_title"
        tools:layout="@layout/signup_fragment" />

    <fragment
        android:id="@+id/syndicatesFragment"
        android:name="com.neqabty.presentation.ui.syndicates.SyndicatesFragment"
        android:label="@string/syndicates_title"
        tools:layout="@layout/syndicates_fragment">
        <action
            android:id="@+id/openHome"
            app:destination="@id/homeFragment" />
    </fragment>

    <fragment
        android:id="@+id/mobileFragment"
        android:name="com.neqabty.presentation.ui.mobile.MobileFragment"
        android:label="@string/mobile_title"
        tools:layout="@layout/mobile_fragment">
        <argument
            android:name="type"
            app:argType="java.lang.Integer" />
        <action
            android:id="@+id/openClaiming"
            app:destination="@id/claimingFragment"
            app:popUpTo="@id/homeFragment"
            app:popUpToInclusive="false" />
        <action
            android:id="@+id/openTripReservation"
            app:destination="@id/tripReservationFragment"
            app:popUpTo="@id/tripDetailsFragment"
            app:popUpToInclusive="false" />
        <action
            android:id="@+id/openEngineeringRecords"
            app:destination="@id/engineeringRecordsDetailsFragment"
            app:popUpTo="@id/homeFragment"
            app:popUpToInclusive="false" />
        <action
            android:id="@+id/openUpdateData"
            app:destination="@id/updateDataDetailsFragment"
            app:popUpTo="@id/homeFragment"
            app:popUpToInclusive="false" />
        <action
            android:id="@+id/openComplaints"
            app:destination="@id/complaintsFragment"
            app:popUpTo="@id/homeFragment"
            app:popUpToInclusive="false" />
    </fragment>
    <fragment
        android:id="@+id/claimingFragment"
        android:name="com.neqabty.presentation.ui.claiming.ClaimingFragment"
        android:label="@string/medicalRequest"
        tools:layout="@layout/claiming_fragment" />

    <fragment
        android:id="@+id/notificationsFragment"
        android:name="com.neqabty.presentation.ui.notifications.NotificationsFragment"
        android:label="@string/notifications_title"
        tools:layout="@layout/notifications_fragment">
        <action
            android:id="@+id/notificationDetails"
            app:destination="@id/notificationDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/notificationDetailsFragment"
        android:name="com.neqabty.presentation.ui.notificationDetails.NotificationDetailsFragment"
        android:label="@string/notifications_title"
        tools:layout="@layout/notification_details_fragment">
        <argument
            android:name="notificationId"
            app:argType="java.lang.String" />
        <argument
            android:name="serviceId"
            app:argType="java.lang.String" />
    </fragment>
    <fragment
        android:id="@+id/newsFragment"
        android:name="com.neqabty.presentation.ui.news.NewsFragment"
        android:label="@string/news_title"
        tools:layout="@layout/news_fragment">
        <action
            android:id="@+id/newsDetails"
            app:destination="@id/newsDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/newsDetailsFragment"
        android:name="com.neqabty.presentation.ui.newsDetails.NewsDetailsFragment"
        android:label="@string/news_title"
        tools:layout="@layout/news_details_fragment">
        <argument
            android:name="newsItem"
            app:argType="com.neqabty.presentation.entities.NewsUI" />
    </fragment>
    <fragment
        android:id="@+id/tripsFragment"
        android:name="com.neqabty.presentation.ui.trips.TripsFragment"
        android:label="@string/trips_title"
        tools:layout="@layout/trips_fragment">
        <action
            android:id="@+id/tripDetails"
            app:destination="@id/tripDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/tripDetailsFragment"
        android:name="com.neqabty.presentation.ui.tripDetails.TripDetailsFragment"
        android:label="@string/trips_title"
        tools:layout="@layout/trip_details_fragment">
        <argument
            android:name="tripItem"
            app:argType="com.neqabty.presentation.entities.TripUI" />
        <action
            android:id="@+id/openLogin"
            app:destination="@id/mobileFragment" />
        <action
            android:id="@+id/openTripReservation"
            app:destination="@id/tripReservationFragment" />
    </fragment>
    <fragment
        android:id="@+id/tripReservationFragment"
        android:name="com.neqabty.presentation.ui.tripsReservation.TripReservationFragment"
        android:label="@string/reserve"
        tools:layout="@layout/trip_reservation_fragment">
        <argument
            android:name="tripItem"
            app:argType="com.neqabty.presentation.entities.TripUI" />
        <action
            android:id="@+id/openLogin"
            app:destination="@id/mobileFragment" />
        <action
            android:id="@+id/openAddCompanionFragment"
            app:destination="@id/addCompanionFragment" />
    </fragment>
    <fragment
        android:id="@+id/addCompanionFragment"
        android:name="com.neqabty.presentation.ui.addCompanion.AddCompanionFragment"
        tools:layout="@layout/add_companion_fragment"></fragment>
    <fragment
        android:id="@+id/paymentFragment"
        android:name="com.neqabty.presentation.ui.payment.PaymentFragment"
        android:label="@string/pay"
        tools:layout="@layout/payment_fragment">

    </fragment>
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.neqabty.presentation.ui.home.HomeFragment"
        android:label="@string/home_title"
        tools:layout="@layout/home_fragment">
        <action
            android:id="@+id/tripDetails"
            app:destination="@id/tripDetailsFragment" />
        <action
            android:id="@+id/newsDetails"
            app:destination="@id/newsDetailsFragment" />
        <action
            android:id="@+id/openLogin"
            app:destination="@id/mobileFragment" />
    </fragment>
    <fragment
        android:id="@+id/medicalCategoriesFragment"
        android:name="com.neqabty.presentation.ui.medicalCategories.MedicalCategoriesFragment"
        android:label="@string/medicalDirectory"
        tools:layout="@layout/medical_categories_fragment">
        <action
            android:id="@+id/openProviders"
            app:destination="@id/medicalProvidersFragment" />
        <action
            android:id="@+id/openProfessions"
            app:destination="@id/medicalProfessionsFragment" />
        <argument
            android:name="governID"
            app:argType="java.lang.Integer" />
        <argument
            android:name="areaID"
            app:argType="java.lang.Integer" />
    </fragment>
    <fragment
        android:id="@+id/medicalProfessionsFragment"
        android:name="com.neqabty.presentation.ui.medicalProfessions.MedicalProfessionsFragment"
        android:label="@string/doctors"
        tools:layout="@layout/medical_professions_fragment">
        <action
            android:id="@+id/openProviders"
            app:destination="@id/medicalProvidersFragment" />
        <argument
            android:name="title"
            app:argType="java.lang.String" />
        <argument
            android:name="categoryId"
            app:argType="java.lang.Integer" />
        <argument
            android:name="governID"
            app:argType="java.lang.Integer" />
        <argument
            android:name="areaID"
            app:argType="java.lang.Integer" />
    </fragment>
    <fragment
        android:id="@+id/medicalProvidersFragment"
        android:name="com.neqabty.presentation.ui.medicalProviders.MedicalProvidersFragment"
        android:label="@string/medicalDirectory"
        tools:layout="@layout/medical_providers_fragment">
        <action
            android:id="@+id/openProviderDetails"
            app:destination="@id/medicalProviderDetailsFragment" />
        <argument
            android:name="title"
            app:argType="java.lang.String" />
        <argument
            android:name="categoryId"
            app:argType="java.lang.Integer" />
        <argument
            android:name="governID"
            app:argType="java.lang.Integer" />
        <argument
            android:name="areaID"
            app:argType="java.lang.Integer" />
        <argument
            android:name="professionID"
            app:argType="java.lang.String" />
        <argument
            android:name="degreeID"
            app:argType="java.lang.String" />
    </fragment>
    <fragment
        android:id="@+id/medicalProviderDetailsFragment"
        android:name="com.neqabty.presentation.ui.medicalProviderDetails.MedicalProviderDetailsFragment"
        android:label="@string/medicalDirectory"
        tools:layout="@layout/medical_provider_details_fragment">
        <argument
            android:name="medicalProviderItem"
            app:argType="com.neqabty.presentation.entities.ProviderUI" />
    </fragment>
    <fragment
        android:id="@+id/chooseAreaFragment"
        android:name="com.neqabty.presentation.ui.chooseArea.ChooseAreaFragment"
        android:label="@string/areaDetails"
        tools:layout="@layout/choose_area_fragment">
        <action
            android:id="@+id/openMedical"
            app:destination="@id/medicalCategoriesFragment" />
    </fragment>
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.neqabty.presentation.ui.search.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/search_fragment">
        <action
            android:id="@+id/openProviders"
            app:destination="@id/medicalProvidersFragment" />
    </fragment>
    <fragment
        android:id="@+id/favoritesFragment"
        android:name="com.neqabty.presentation.ui.favorites.FavoritesFragment"
        android:label="@string/favorites"
        tools:layout="@layout/medical_favorites_fragment">
        <action
            android:id="@+id/providerDetails"
            app:destination="@id/medicalProviderDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/updateDataFragment"
        android:name="com.neqabty.presentation.ui.updateData.UpdateDataFragment"
        android:label="@string/update_data_title"
        tools:layout="@layout/update_data_fragment">
        <action
            android:id="@+id/updateDataDetails"
            app:destination="@id/updateDataDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/updateDataDetailsFragment"
        android:name="com.neqabty.presentation.ui.updateDataDetails.UpdateDataDetailsFragment"
        android:label="@string/update_data_title"
        tools:layout="@layout/update_data_details_fragment">

        <!--<argument-->
        <!--android:name="userDataInquire"-->
        <!--app:argType="com.neqabty.presentation.entities.InquireUpdateUserDataUI" />-->

        <action
            android:id="@+id/updateDataVerification"
            app:destination="@id/updateDataVerificationFragment" />
    </fragment>
    <fragment
        android:id="@+id/updateDataVerificationFragment"
        android:name="com.neqabty.presentation.ui.updateDataVerification.UpdateDataVerificationFragment"
        android:label="@string/update_data_title"
        tools:layout="@layout/update_data_verification_fragment">

        <argument
            android:name="userDataInquire"
            app:argType="com.neqabty.presentation.entities.InquireUpdateUserDataUI" />

        <argument
            android:name="code"
            app:argType="java.lang.String" />

        <action
            android:id="@+id/updateDataVerification"
            app:destination="@id/updateDataVerificationFragment" />
    </fragment>
    <fragment
        android:id="@+id/engineeringRecordsInquiryFragment"
        android:name="com.neqabty.presentation.ui.engineeringRecordsInquiry.EngineeringRecordsInquiryFragment"
        android:label="@string/engineering_records_title"
        tools:layout="@layout/engineering_records_inquiry_fragment">
        <action
            android:id="@+id/engineeringRecordsDetails"
            app:destination="@id/engineeringRecordsDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/engineeringRecordsDetailsFragment"
        android:name="com.neqabty.presentation.ui.engineeringRecordsDetails.EngineeringRecordsDetailsFragment"
        android:label="@string/engineering_records_title"
        tools:layout="@layout/engineering_records_details_fragment">

        <!--<argument-->
        <!--android:name="memberItem"-->
        <!--app:argType="com.neqabty.presentation.entities.RegisteryUI" />-->

    </fragment>
    <fragment
        android:id="@+id/inquiryFragment"
        android:name="com.neqabty.presentation.ui.inquiry.InquiryFragment"
        android:label="@string/inquiry_title"
        tools:layout="@layout/inquiry_fragment">
        <action
            android:id="@+id/inquiryDetails"
            app:destination="@id/inquiryDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/inquiryDetailsFragment"
        android:name="com.neqabty.presentation.ui.inquiryDetails.InquiryDetailsFragment"
        android:label="@string/inquiry_title"
        tools:layout="@layout/inquiry_details_fragment">
        <argument
            android:name="memberItem"
            app:argType="com.neqabty.presentation.entities.MemberUI" />

        <action
            android:id="@+id/openPayment"
            app:destination="@id/paymentFragment" />
    </fragment>
    <fragment
        android:id="@+id/complaintsFragment"
        android:name="com.neqabty.presentation.ui.complaint.ComplaintFragment"
        android:label="@string/complaints_title"
        tools:layout="@layout/complaint_fragment" />
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.neqabty.presentation.ui.about.AboutFragment"
        android:label="@string/about_title"
        tools:layout="@layout/about_fragment" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.neqabty.presentation.ui.settings.SettingsFragment"
        android:label="@string/settings_title"
        tools:layout="@layout/settings_fragment" />
</navigation>